# brain-worker

./: README.md  pyproject.toml
benchmarks/: correctness.py  large_scale.py  novel_tasks.py  skill_amortization.py
benchmarks/results/: correctness.json  dp_skill_v2.md  large_scale.json  novel_gpt-5-mini.json  skill_amortization.json
examples/: dp_skill.md  orchestrate.py  quickstart.py
skills/: protocol.md
skills/claude-code/: SKILL.md
src/brain_worker/: __init__.py  __main__.py  models.py  parsers.py  pipeline.py  prompts.py  schema.py
